# cuda-advanced-projects

./: .gitignore  README.md
01.deeplearning_inference_engine/: CMakeLists.txt  README.md  conv_kernels.cu  convolution.h  graph.h  layer.h  project_structure.txt  resnet_inference.cpp  tensor.h
01.deeplearning_inference_engine/examples/: CMakeLists.txt  resnet_inference.cpp  yolo_inference.cpp
01.deeplearning_inference_engine/include/core/: allocator.h  graph.h  layer.h  tensor.h  types.h
01.deeplearning_inference_engine/tests/: CMakeLists.txt
02.Real-Time_Image_Denoising_Engine/: CMakeLists.txt  README.md  project_structure.txt  requirements.txt
02.Real-Time_Image_Denoising_Engine/data/: _.txt
02.Real-Time_Image_Denoising_Engine/include/: cuda_denoiser.h  image_processor.h  memory_manager.h
02.Real-Time_Image_Denoising_Engine/python/: denoising_pipeline_pyqt5.py  denoising_pipeline_tkinter.py
02.Real-Time_Image_Denoising_Engine/src/: main.cpp
03.vit-B16_CUDA_Cpp/: CMakeLists.txt  README.md
03.vit-B16_CUDA_Cpp/include/: cublaslt_utils.hpp  cuda_utils.hpp  ops_fuse.hpp  ops_gelu.hpp  ops_layernorm.hpp  ops_patch_embed.hpp  ops_position_embed.hpp  ops_softmax.hpp  tensor.hpp  timers.hpp  vit_block.hpp  vit_model.hpp  weights.hpp
03.vit-B16_CUDA_Cpp/src/: cublaslt_utils.cpp  main.cpp  ops_fuse.cu  ops_gelu.cu  ops_layernorm.cu  ops_patch_embed.cu  ops_position_embed.cu  ops_softmax.cu  tensor.cu  timers.cpp  vit_block.cu  vit_model.cu  weights.cpp
03.vit-B16_CUDA_Cpp/tools/: gen_dummy_weights.cpp
04.EfficientNet-B0_CUDA_/: CMakeLists.txt  README.md  project_structure.txt
04.EfficientNet-B0_CUDA_/apps/: bench_cudnn.cpp  classify_ort.cpp  classify_trt.cpp
04.EfficientNet-B0_CUDA_/cmake/: FindCUDNN.cmake  FindONNXRuntime.cmake
04.EfficientNet-B0_CUDA_/tools/: calib_list.txt  download_ort.sh  export_to_onnx.py
06.GPU_NBody_Simulation/: BINDINGS.md  CMakeLists.txt  README.md  setup.py
06.GPU_NBody_Simulation/include/: nbody.h  renderer.h
06.GPU_NBody_Simulation/python/: README_PYTHON.md  nbody_bindings.cpp
06.GPU_NBody_Simulation/scripts/: demo.py  test_bindings.py
06.GPU_NBody_Simulation/src/: main.cu  main_visual.cu  nbody_helper.cpp  nbody_kernels.cu  renderer.cpp
07-parallel-ml-models/: CMakeLists.txt  README.md
07-parallel-ml-models/include/: kmeans.h  linear_regression.h  model_manager.h  visualizer.h
07-parallel-ml-models/src/: kmeans.cu  linear_regression.cu  main.cpp  model_manager.cpp  visualizer.cpp
08.simple-cuda-cnn/: CMakeLists.txt  README.md  build.sh
08.simple-cuda-cnn/include/: cnn_cuda.h
08.simple-cuda-cnn/python/: benchmark.py  demo.py  test_simple.py  visualize.py
08.simple-cuda-cnn/src/: cnn_kernels.cu  cnn_wrapper.cpp
09.EfficientNet-TensorRT-Optimization/: .gitignore  CMakeLists.txt  README.md  build.sh
09.EfficientNet-TensorRT-Optimization/include/: calibrator.h  cuda_preprocess.h  trt_engine.h
09.EfficientNet-TensorRT-Optimization/python/: benchmark_pytorch.py  export_model.py
09.EfficientNet-TensorRT-Optimization/src/: benchmark.cpp  calibrator.cpp  cuda_preprocess.cu  main.cpp  trt_engine.cpp
09.EfficientNet-TensorRT-Optimization/tools/: download_sample_data.sh
10.Real-Time_Video_Stabilization/: .gitignore  CMakeLists.txt  README.md  build.sh
10.Real-Time_Video_Stabilization/include/: common.hpp  frame_warping.cuh  gaussian_pyramid.cuh  memory_manager.hpp  motion_estimation.cuh  optical_flow.cuh  trajectory_smoother.hpp  video_stabilizer.hpp
10.Real-Time_Video_Stabilization/src/: main.cpp
11.LSTM-CUDA-Implementation/: .gitignore  CMakeLists.txt  README.md
11.LSTM-CUDA-Implementation/include/: lstm_kernels.cuh  lstm_layer.h
11.LSTM-CUDA-Implementation/src/: lstm_kernels.cu  lstm_layer.cu  test.cu  train.cu
12.DQN-CUDA-Implementation/: .gitignore  CMakeLists.txt  README.md
12.DQN-CUDA-Implementation/include/: cartpole_env.h  dqn_kernels.cuh  dqn_network.h
12.DQN-CUDA-Implementation/src/: dqn_kernels.cu  dqn_network.cu  predict.cu  train.cu
13.GPT-Transformer-Inference/: CMakeLists.txt  README.md
13.GPT-Transformer-Inference/include/: cuda_utils.h  kv_cache.h  tokenizer.h  transformer.h  transformer_kernels.cuh
13.GPT-Transformer-Inference/src/: benchmark.cu  inference.cu  kv_cache.cu  quantization.cu  speculative.cu  transformer.cu  transformer_kernels.cu
13.GPT-Transformer-Inference/tests/: test_attention.cu
14.Stable-Diffusion-CUDA/: CMakeLists.txt
14.Stable-Diffusion-CUDA/include/: clip.h  cuda_utils.h  diffusion_kernels.cuh  pipeline.h  scheduler.h  unet.h  vae.h
14.Stable-Diffusion-CUDA/src/: benchmark.cu  clip.cu  diffusion_kernels.cu  inference.cu  pipeline.cu  scheduler.cu  unet.cu  vae.cu
14.Stable-Diffusion-CUDA/tests/: test_kernels.cu
15.Whisper-Speech-Recognition-CUDA/: CMakeLists.txt
15.Whisper-Speech-Recognition-CUDA/include/: beam_search.h  cuda_utils.h  decoder.h  encoder.h  mel_spectrogram.h  pipeline.h  tokenizer.h  wav_reader.h  whisper_kernels.cuh
15.Whisper-Speech-Recognition-CUDA/src/: beam_search.cu  decoder.cu  encoder.cu  main.cu  mel_spectrogram.cu  pipeline.cu  test_whisper.cu  tokenizer.cpp  wav_reader.cpp  whisper_kernels.cu
16.3D-Gaussian-Splatting-CUDA/: CMakeLists.txt  README.md
16.3D-Gaussian-Splatting-CUDA/include/: camera.h  cuda_utils.h  gaussian.h  ply_reader.h  renderer.h  splatting_kernels.cuh  viewer.h
16.3D-Gaussian-Splatting-CUDA/src/: benchmark.cu  gaussian.cu  main.cu  ply_reader.cpp  renderer.cu  splatting_kernels.cu  viewer.cu
16.3D-Gaussian-Splatting-CUDA/tests/: test_splatting.cu
17.YOLOv8-CUDA-Object-Detection/: CMakeLists.txt  README.md  detections.ppm
17.YOLOv8-CUDA-Object-Detection/include/: backbone.h  conv2d.h  cuda_utils.h  head.h  image_io.h  neck.h  pipeline.h  postprocess.h  ts_pipeline.h  yolo_kernels.cuh  yolov8.h
17.YOLOv8-CUDA-Object-Detection/src/: backbone.cu  benchmark.cu  conv2d.cu  head.cu  image_io.cpp  main.cu  neck.cu  pipeline.cu  postprocess.cu  ts_pipeline.cpp  yolo_camera.cpp  yolo_kernels.cu  yolov8.cu
17.YOLOv8-CUDA-Object-Detection/tests/: test_yolo.cu
(+74 files in other folders)
